@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 1.2.4  ...
+          - fixed eventhandlers not being passed to worker
           - internal changes to support freebsd
 
 1.2.2  Tue Feb  7 18:06:02 CET 2012
